Closed Bug 1251001 Opened 10 years ago Closed 10 years ago

Input fields at the bottom of a page do not pan into view when gaining focus.

Categories

(Core :: Panning and Zooming, defect)

Unspecified
Android
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla47
Tracking Status
firefox47 --- fixed

People

(Reporter: rbarker, Assigned: rbarker)

References

Details

(Keywords: correctness, polish, Whiteboard: [gfx-noted])

Attachments

(1 file, 1 obsolete file)

In Fennec, when an input field gains focus, it should be panned to the center of the screen. However, when the field is at the bottom of the page, the centering code causes it to be panned under the keyboard so it is not visible. Field centering should be disabled if the page would overflow to pan the element into view.
Assignee: nobody → rbarker
Depends on: 1231517
Attachment #8723169 - Flags: review?(botond)
Blocks: 1235666
Keywords: correctness, polish
OS: Unspecified → Android
Whiteboard: [gfx-noted]
Attachment #8723206 - Flags: review?(botond)
Attachment #8723206 - Flags: review?(botond) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: