Bug 1251001 - Input fields at the bottom of a page do not pan into view when gaining focus. r=botond